--- a/resources/css/photos.css
+++ b/resources/css/photos.css
@@ -1,24 +1,38 @@
+.main {
+  padding: 0 4px;
+  margin-top: 100px;
+  background-color: rgb(186, 182, 182);
+}
 
-td img {
-    width: 200px;
-    height: 300px;
-    padding: 20px;
-  }
-  
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-    margin-top: 100px;
-  }
-  
-  .column {
-    flex: 50%;
-    padding: 0 4px;
-  }
-  
-  .column img {
-    margin-top: 8px;
-    vertical-align: middle;
-    width: 300px;
-  }
+h2 {
+  font-family: 'Nerko One', cursive;
+  font-size: 40px;
+  color: rgb(219, 59, 112);
+  text-align: center;
+}
+
+.row{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: auto;
+}
+
+.column {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.column img {
+  margin: 10px auto;
+  height: auto;
+  width: auto;
+}
+
+p {
+  font-size: 20px;
+  font-family: 'Anybody-Light';
+  line-height: 35px;
+  padding-left: 20px;
+}
