--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -1,6 +1,6 @@
 .list-info{
-    margin-top: 100px;
+    padding: 120px 0px;
     margin-left: 30px;
     list-style: inside;
-    font-family: 'Anybody-Light';
+    font-family: 'Roboto-Light';
   }
