--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -21,7 +21,7 @@ header {
     width: 100%;
 }
 
-header .content{
+header .navbar{
     display: flex;
     align-items: center;
     padding: 0.25rem;
@@ -73,7 +73,7 @@ header .mobile {
         width: 2.7rem;
     }
 
-    header .content {
+    header .navbar {
       padding: .5rem 0;
     }
   
@@ -88,7 +88,7 @@ header .mobile {
       padding: 0;
     }
 
-    footer .content {
+    footer .footer-content {
       font-size: 0.5rem;
       font-family: "RobotoSlab-Bold";
     }
@@ -111,7 +111,7 @@ footer {
   background-color: #D989B5;
 }
 
-footer .content {
+footer .footer-content  {
     color: #863A6F;
     display: flex;
     flex-wrap: wrap;
@@ -138,7 +138,7 @@ footer img{
 
 @media only screen and (max-width: 600px) {
 
-  footer .content {
+  footer .footer-content  {
     font-size: 1rem;
   }
 }
