--- a/resources/css/watch.css
+++ b/resources/css/watch.css
@@ -1,11 +1,10 @@
 .main {
-  padding: 0 4px;
-  margin-top: 100px;
-  background-color: rgb(186, 182, 182);
+  padding: 120px 0px;
+  background-color: white;
 }
 
 h2 {
-  font-family: 'Nerko One', cursive;
+  font-family: "RobotoSlab-Bold";
   font-size: 40px;
   color: rgb(219, 59, 112);
   text-align: center;
@@ -32,7 +31,7 @@ h2 {
 
 p {
   font-size: 20px;
-  font-family: 'Anybody-Light';
+  font-family: 'Roboto-Light';
   line-height: 35px;
   padding-left: 20px;
 }
